Implement inline* options for minify mojo #73